@@ -4,8 +4,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.egov.common.data.query.builder.GenericQueryBuilder;
 import org.egov.common.data.query.builder.QueryFieldChecker;
 import org.egov.common.data.query.builder.SelectQueryBuilder;
-import org.egov.common.data.query.exception.QueryBuilderException;
 import org.egov.common.data.repository.GenericRepository;
+import org.egov.common.exception.InvalidTenantIdException;
 import org.egov.common.models.core.SearchResponse;
 import org.egov.common.models.household.HouseholdMember;
 import org.egov.common.models.household.HouseholdMemberSearch;
@@ -26,6 +26,7 @@ import java.util.stream.Collectors;
 
 import static org.egov.common.utils.CommonUtils.constructTotalCountCTEAndReturnResult;
 import static org.egov.common.utils.CommonUtils.getIdMethod;
+import static org.egov.common.utils.MultiStateInstanceUtil.SCHEMA_REPLACE_STRING;
 
 @Repository
 @Slf4j
@@ -41,18 +42,30 @@ public class HouseholdMemberRepository extends GenericRepository<HouseholdMember
     }
 
 
+    /**
+     * This method fetches the list of household members based on the search criteria provided.
+     *
+     * @param householdMemberSearch The criteria used to filter the household members.
+     * @param limit                The maximum number of records to return.
+     * @param offset               The starting point for fetching records.
+     * @param tenantId             The tenant ID for which the records are being fetched.
+     * @param lastChangedSince     The timestamp to filter records that have changed since this time.
+     * @param includeDeleted       Flag to include deleted records in the result.
+     * @return SearchResponse<HouseholdMember> A response object containing the list of household members and total count.
+     */
     public SearchResponse<HouseholdMember> find(HouseholdMemberSearch householdMemberSearch,
                                                 Integer limit,
                                                 Integer offset,
                                                 String tenantId,
                                                 Long lastChangedSince,
-                                                Boolean includeDeleted) {
+                                                Boolean includeDeleted) throws InvalidTenantIdException {
 
         Map<String, Object> paramsMap = new HashMap<>();
         StringBuilder queryBuilder = new StringBuilder();
 
-        String query = "SELECT * FROM household_member";
-
+        // Check if the tenant ID is valid
+        String query = "SELECT * FROM %s.household_member";
+        query =String.format(query, SCHEMA_REPLACE_STRING);
         List<String> whereFields = GenericQueryBuilder.getFieldsWithCondition(householdMemberSearch, QueryFieldChecker.isNotNull, paramsMap);
         query = GenericQueryBuilder.generateQuery(query, whereFields).toString().trim();
 
@@ -77,10 +90,12 @@ public class HouseholdMemberRepository extends GenericRepository<HouseholdMember
         paramsMap.put("lastModifiedTime", lastChangedSince);
 
         queryBuilder.append(" ORDER BY id ASC ");
+        // replace the schema placeholder with the actual tenant ID
+        query = multiStateInstanceUtil.replaceSchemaPlaceholder(queryBuilder.toString(), tenantId);
+        Long totalCount = constructTotalCountCTEAndReturnResult(query, paramsMap, this.namedParameterJdbcTemplate);
 
-        Long totalCount = constructTotalCountCTEAndReturnResult(queryBuilder.toString(), paramsMap, this.namedParameterJdbcTemplate);
-
-        queryBuilder.append(" LIMIT :limit OFFSET :offset");
+        // Add pagination to the query
+        queryBuilder = new StringBuilder(query).append(" LIMIT :limit OFFSET :offset");
         paramsMap.put("limit", limit);
         paramsMap.put("offset", offset);
 
@@ -89,50 +104,83 @@ public class HouseholdMemberRepository extends GenericRepository<HouseholdMember
         return SearchResponse.<HouseholdMember>builder().totalCount(totalCount).response(householdMembers).build();
     }
 
-    public SearchResponse<HouseholdMember> findById(List<String> ids, String columnName, Boolean includeDeleted) {
-        List<HouseholdMember> objFound = findInCache(ids).stream()
+    /**
+     * This method fetches a list of household members based on their IDs.
+     *
+     * @param tenantId       The tenant ID for which the records are being fetched.
+     * @param ids            The list of IDs of the household members to be fetched.
+     * @param columnName     The name of the column to be used for filtering.
+     * @param includeDeleted Flag to include deleted records in the result.
+     * @return SearchResponse<HouseholdMember> A response object containing the list of household members and total count.
+     */
+    public SearchResponse<HouseholdMember> findById(String tenantId, List<String> ids, String columnName, Boolean includeDeleted) throws InvalidTenantIdException {
+        List<HouseholdMember> objFound = findInCache( tenantId, ids).stream()
                 .filter(entity -> entity.getIsDeleted().equals(includeDeleted))
                 .collect(Collectors.toList());
+        // Check if the list of IDs is empty
         if (!objFound.isEmpty()) {
             Method idMethod = getIdMethod(objFound, columnName);
             ids.removeAll(objFound.stream()
                     .map(obj -> (String) ReflectionUtils.invokeMethod(idMethod, obj))
-                    .collect(Collectors.toList()));
+                    .toList());
             if (ids.isEmpty()) {
                 log.info("all objects were found in the cache, returning objects");
                 return SearchResponse.<HouseholdMember>builder().response(objFound).build();
             }
         }
 
-        String query = String.format("SELECT * FROM household_member where %s IN (:ids) AND isDeleted = false", columnName);
+        // If the list of IDs is not empty, proceed to fetch from the database
+        String query = String.format("SELECT * FROM %s.household_member where %s IN (:ids) AND isDeleted = false", SCHEMA_REPLACE_STRING ,columnName);
         if (null != includeDeleted && includeDeleted) {
-            query = String.format("SELECT * FROM household_member WHERE %s IN (:ids)", columnName);
+            // If includeDeleted is true, fetch all records including deleted ones
+            query = String.format("SELECT * FROM %s.household_member WHERE %s IN (:ids)", SCHEMA_REPLACE_STRING, columnName);
         }
         Map<String, Object> paramMap = new HashMap();
         paramMap.put("ids", ids);
-
+        // replace the schema placeholder with the actual tenant ID
+        query = multiStateInstanceUtil.replaceSchemaPlaceholder(query, tenantId);
         objFound.addAll(this.namedParameterJdbcTemplate.query(query, paramMap, this.rowMapper));
         putInCache(objFound);
         log.info("returning objects from the database");
         return SearchResponse.<HouseholdMember>builder().response(objFound).build();
     }
 
-    public SearchResponse<HouseholdMember> findIndividual(String individualId) {
+    /**
+     * This method fetches a list of household members based on their individual IDs.
+     *
+     * @param tenantId       The tenant ID for which the records are being fetched.
+     * @param individualId   The individual ID of the household members to be fetched.
+     * @return SearchResponse<HouseholdMember> A response object containing the list of household members and total count.
+     */
+    public SearchResponse<HouseholdMember> findIndividual(String tenantId , String individualId) throws InvalidTenantIdException {
         log.info("searching for HouseholdMember with individualId: {}", individualId);
-        String query = "SELECT * FROM household_member where individualId = :individualId AND isDeleted = false";
+        // add the schema placeholder to the query
+        String query = String.format("SELECT * FROM %s.household_member where individualId = :individualId AND isDeleted = false" , SCHEMA_REPLACE_STRING) ;
         Map<String, Object> paramMap = new HashMap();
         paramMap.put("individualId", individualId);
+        // replace the schema placeholder with the actual tenant ID
+        query = multiStateInstanceUtil.replaceSchemaPlaceholder(query, tenantId);
         List<HouseholdMember> householdMembers = this.namedParameterJdbcTemplate.query(query, paramMap, this.rowMapper);
         return SearchResponse.<HouseholdMember>builder().totalCount(Long.valueOf(householdMembers.size())).response(householdMembers).build();
     }
 
-    public SearchResponse<HouseholdMember> findIndividualByHousehold(String householdId, String columnName) {
+    /**
+     * This method fetches a list of household members based on their household ID.
+     *
+     * @param tenantId       The tenant ID for which the records are being fetched.
+     * @param householdId    The household ID of the household members to be fetched.
+     * @param columnName     The name of the column to be used for filtering.
+     * @return SearchResponse<HouseholdMember> A response object containing the list of household members and total count.
+     */
+    public SearchResponse<HouseholdMember> findIndividualByHousehold(String tenantId, String householdId, String columnName) throws InvalidTenantIdException {
         log.info("searching for HouseholdMembers with householdId: {}", householdId);
-        String query = String.format("SELECT * FROM household_member where %s = :householdId AND isDeleted = false",
-                columnName);
+        // add the schema placeholder to the query
+        String query = String.format("SELECT * FROM %s.household_member where %s = :householdId AND isDeleted = false",
+                SCHEMA_REPLACE_STRING, columnName);
         Map<String, Object> paramMap = new HashMap();
         paramMap.put("householdId", householdId);
-
+        // replace the schema placeholder with the actual tenant ID
+        query = multiStateInstanceUtil.replaceSchemaPlaceholder(query, tenantId);
         Long totalCount = constructTotalCountCTEAndReturnResult(query, paramMap, this.namedParameterJdbcTemplate);
 
         List<HouseholdMember> householdMembers = this.namedParameterJdbcTemplate.query(query, paramMap, this.rowMapper);
